# Projetao6Periodo

./: README.md  docker-compose.yml
notebook/: Dockerfile  pyproject.toml  requirements.txt
notebook/data/: bairro.csv  bairro_lat_long.csv  cif.csv  csv_CID-10-CATEGORIAS.CSV
notebook/notes/: Untitled.ipynb
notebook/notes/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
superset/dashboards/: 20201026_125803.json  20201124_155958.json  20201125_145627.json
