[tool.poetry]
name = "Tiago"
version = "0.1.0"
description = ""
authors = ["Valença <tlv@cesar.org.br>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.1"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
pyarrow = "^1.0.1"
plotly = "^4.12.0"
seaborn = "^0.11.0"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"